<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:gravity="center"
   android:background="@color/grey"

    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="250dp"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/android_application_for_calculating_savings_in_foreign_currency"
        android:layout_marginBottom="50dp"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/firstScreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@color/yellow"
        android:text="@string/start_calculations"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/exitButton"
        android:textSize="18sp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textColor="@color/white"
        />


</LinearLayout>